--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,4 @@
-<!--
-  Hello!
-  -
-  Simplefolio is a clean and responsive portfolio template for Developers!
-  Created by Jacobo Martinez.
-  -
-  Github Repo: https://github.com/cobiwave/simplefolio/
-  Readme: https://github.com/cobiwave/simplefolio/README.md
-  -
-  For business & inquires, contact me -> jacobojavier98@gmail.com
--->
+
 <!DOCTYPE html>
 <html lang="en" class="sr">
   <head>
@@ -17,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
-    <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
-    <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
-    <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <!-- Site Title -->
+    <title>Raghavendra Sripalasetty | Developer</title>
+    <!-- Keywords for SEO -->
+    <meta name="keywords" content="Raghavendra Sripalasetty, full-stack developer, MERN stack, JavaScript, React, Node.js" />
+    <!-- Description for SEO -->
+    <meta name="description" content="Raghavendra Sripalasetty is a full-stack developer with expertise in the MERN stack, specializing in creating dynamic and responsive web applications." />
 
     <link
       rel="stylesheet"
@@ -33,12 +23,8 @@
       defer
       src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
     ></script>
-
-    <!-- Todo: remove the below script once you finish your portfolio -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
 
-  <!-- Todo: read the following HTML Todos to create your stunning portfolio website -->
   <body>
     <div id="top"></div>
 
@@ -46,9 +32,9 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Raghavendra Sripalasetty</span>
           <br />
-          I'm the Unknown Developer.
+          I'm the Fullstack Developer.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -79,11 +65,11 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you have!
-              </p>
-              <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                Hi, I'm Raghavendra Sripalasetty, a passionate full-stack developer with a knack for building dynamic and user-friendly web applications.
+                With expertise in the MERN stack, I'm constantly pushing the boundaries of what's possible in the digital space. My journey in tech has been
+                fueled by a desire to solve real-world problems through innovative solutions—whether it's through my SNAPP social networking app that
+                connects communities or my Personal Expense Tracker that simplifies financial management. I'm always eager to learn, grow, and share my
+                knowledge, aiming to make technology more accessible and impactful for everyone.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -112,19 +98,33 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">Real-time Chat Application</h3>
                 <div>
                   <p class="mb-4">
-                    Describe the project being very specific, you can use the Twitter standard: no more than 280 characters: 
-                    complement the information: the skills learned or reinforced in its realization and how you faced it, 
-                    prove to be proactive in the search for solutions.
+                    The Real-Time Chat Application is a feature-rich messaging platform designed for seamless communication.
+                    Built using Firebase and React, this app provides users with a smooth and interactive chat experience,
+                    supporting text messaging, multimedia sharing, and user management. The application emphasizes simplicity and speed,
+                    making it ideal for both personal and group conversations.
+                  </br>
+                    <strong>Key Features:</strong> 
+                    <strong>Real-Time Messaging:</strong> Instant messaging with live updates, allowing users to chat in real-time.
+                  </br>
+                    <strong>User Management:</strong> Add, remove, or block users easily, ensuring control over who can interact with you.
+                  </br>
+                    <strong>Multimedia Sharing:</strong> Send images along with text messages for a richer chat experience.
+                  </br>
+                    <strong>Secure Authentication:</strong> Powered by Firebase, the app includes secure user authentication for a safe environment.
+                  </br>
+                    <strong>Frontend Technologies:</strong> React.js for a fast and responsive user interface.
+                  </br>
+                    <strong>Backend Technologies:</strong> Firebase for real-time database and user authentication.
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://chat200.netlify.app/"
                 >
                   See Live
                 </a>
@@ -132,7 +132,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/Ragav-2002/react-firebase-chatApp"
                 >
                   Source Code
                 </a>
@@ -151,7 +151,86 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/chat.png"
+                    />
+                </br>
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/add.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Social Networking App</h3>
+                <div>
+                  <p class="mb-4">
+                    SNAPP is a vibrant social networking platform designed to connect users with their communities in a dynamic and engaging way. The app allows users to post images and videos, share updates, and interact within their chosen communities. SNAPP fosters seamless communication and interaction between users, making it a hub for local and niche communities.
+                  </br>
+                    <strong>Key Features:</strong>
+                  </br>
+                    <strong>Post Images and Videos:</strong> Users can easily upload and share multimedia content within their communities.
+                  </br>
+                    <strong>Community-Based Interactions:</strong> Join specific communities, share posts, and engage with like-minded individuals.
+                  </br>
+                    <strong>Mail Updates:</strong> Get timely updates from the communities you're part of through personalized email notifications.
+                  </br>
+                    <strong>User-Friendly Interface:</strong> Built with Material UI, SNAPP ensures a sleek, responsive design and intuitive user experience.
+                  </br>
+                    <strong>Frontend technologies:</strong> React.js (MERN stack) for a fast and efficient user interface.
+                  </br>
+                    <strong>Backend technologies:</strong> Node.js with Express.js for handling server-side logic and API requests.
+                  </br>
+                    <strong>Database:</strong> MongoDB for scalable and flexible data management.
+                  </br>
+                    <strong>UI Framework:</strong> Material UI to provide a modern, clean, and responsive design.
+                  </br>
+                    SNAPP is built to be a robust platform, focusing on community-driven interaction while ensuring user privacy and data security.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://frolicking-sunshine-94655a.netlify.app/"
+                >
+                  See Live
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/Ragav-2002/social_networking_app_frontend"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="#!" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/snapp.png"
+                    />
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/snapp2.png"
                     />
                   </div>
                 </a>
@@ -164,19 +243,22 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">Expense Tracker Application</h3>
                 <div>
                   <p class="mb-4">
-                    Demonstrate in this description the skills of a programmer: such as having commitment, 
-                    having perseverance and accepting alternative solutions. Remember that being a portfolio you are not selling the project, 
-                    you are selling yourself, it reflects the resources used: Frameworks, libraries, platforms, etc.
+                    The Personal Expense Tracker is a straightforward web application aimed at helping users manage their daily 
+                    expenses efficiently. It allows users to securely create accounts, record expenses, categorize them, and track their
+                     financial activity over time. With an intuitive interface, users can log transactions, categorize spending, and view
+                      detailed summaries to better understand their financial habits. While the app offers essential features like account
+                       management, expense tracking, and categorization, it is not optimized for mobile responsiveness, making it best suited
+                        for desktop use.
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://marvelous-khapse-637e45.netlify.app/"
                 >
                   See Live
                 </a>
@@ -184,7 +266,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/Ragav-2002/ExpenseTracker"
                 >
                   Source Code
                 </a>
@@ -203,58 +285,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Notice: each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 2</h3>
-                <div>
-                  <p class="mb-4">
-                    If the project was collaborative, reflect it in this description, that will demonstrate communication and/or leadership skills. 
-                    Additionally, if you made use of the mastery of a second language, it will reflect on you professionalism.
-                  </p>
-                </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="#!"
-                >
-                  See Live
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/exp.png"
                     />
                   </div>
                 </a>
@@ -272,13 +303,13 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text">Have a question or an exciting opportunity? let's chat!</p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:sripalasettyraghavendra2002@email.com"
+            >Get in Touch</a
           >
         </div>
       </div>
@@ -292,50 +323,14 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://www.linkedin.com/in/sripalasetty-raghavendra-089649238/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://github.com/Ragav-2002" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
-
         <hr />
-
-        <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
-        <p class="footer__text">
-          © 2021 - Template developed by
-          <a rel="noreferrer" href="https://github.com/cobiwave" target="_blank"
-            >Jacobo Martínez</a
-          >
-        </p>
-
-        <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobiwave/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            rel="noreferrer" 
-            class="github-button"
-            href="https://github.com/cobiwave/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobiwave/simplefolio on GitHub"
-            >Star</a
-          >
-        </p>
       </div>
     </footer>
     <!-- /END Footer Section -->
